# Party_Llama

./: .clang-tidy  .gitignore  README.md  party_llama.hpp
__tests__/: CMakeLists.txt
__tests__/async_events/: CMakeLists.txt  async_events.tests.cpp
__tests__/immediate_events/: CMakeLists.txt  immediate_events.tests.cpp
include/: callback.hpp  event.hpp  event_queue.hpp  event_system_async.hpp  event_system_immediate.hpp  thread_safe_queue.hpp
party_llama/: callback.hpp  concepts.hpp  event.hpp  event_system_async.hpp  event_system_immediate.hpp  thread_safe_queue.hpp  work.hpp
